# tazkera

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.txt
alembic/: env.py
alembic/versions/: ed83e70d8510_initial_schema.py
configs/: it_helpdesk.yaml  sfda.yaml
docs/: eval_results.json
scripts/: eval_classify.py  generate_embeddings.py  seed_db.py  seed_it_helpdesk.py  test_classify.py
src/: config.py  database.py  main.py
src/adapters/: base.py  odoo.py  webhook.py
src/api/: router.py
src/api/v1/: odoo.py  tickets.py
src/data/: generator.py
src/domain/: loader.py
src/models/: __init__.py  ticket.py
src/schemas/: domain.py  ticket.py
src/services/: classifier.py  embeddings.py  rag.py  router_engine.py
src/static/: index.html
src/workflows/: intake.py
